--- a/roles/sigsum/templates/sigsum-log-primary@.service.j2
+++ b/roles/sigsum/templates/sigsum-log-primary@.service.j2
@@ -7,7 +7,7 @@ After=trillian-server.service
 Type=simple
 User={{ sigsum_user }}
 StandardError=journal
-ExecStart=/usr/bin/sigsum-log-start.sh primary {{ sigsum_url_prefix }} %i
+ExecStart=/usr/bin/sigsum-log-start.sh primary %i {{ sigsum_url_prefix }}
 Restart=on-failure
 
 [Install]
