Correct two config settings
These were the obvious ones. There might be more to fix here.

--- a/roles/sigsum/templates/config.toml.j2
+++ b/roles/sigsum/templates/config.toml.j2
@@ -14,7 +14,7 @@ ephemeral-test-backend = {{ephemeral_test_backend}}
 url-prefix = "{{url_prefix}}"
 {% endif %}
 {% if tree_id %}
-trillian-id = {{tree_id}}
+tree-id = {{tree_id}}
 {% endif %}
 {% if timeout %}
 timeout = "{{timeout}}"
@@ -23,7 +23,7 @@ timeout = "{{timeout}}"
 key = "{{key}}"
 {% endif %}
 {% if interval %}
-interval = {{interval}}
+interval = "{{interval}}"
 {% endif %}
 {% if log_file %}
 log-file = "{{log_file}}"
