--- a/roles/sigsum/templates/trillian-server.service.j2
+++ b/roles/sigsum/templates/trillian-server.service.j2
@@ -6,7 +6,7 @@ After=trillian-signer.service
 [Service]
 Type=simple
 User={{ sigsum_user }}
-ExecStart=/var/sigsum/{{ sigsum_user }}/go/bin/trillian_log_server \
+ExecStart={{ sigsum_home }}/go/bin/trillian_log_server \
     --rpc_endpoint=localhost:6962 \
     --http_endpoint=localhost:6963 \
     --mysql_uri '{{ sigsum_user }}:{{ sigsum_db_pw }}@tcp(127.0.0.1:3306)/{{ sigsum_db_name }}'
