sigsum: config.toml.j2: Add comment that ansible (over)writes the file

--- a/roles/sigsum/templates/config.toml.j2
+++ b/roles/sigsum/templates/config.toml.j2
@@ -1,3 +1,6 @@
+#
+# This file is managed by ansible -- any manual edits will be overwritten.
+#
 {% if sigsum_url_prefix             -%}  url-prefix = "{{ sigsum_url_prefix }}"                        {{- '\n' }}{% endif %}
 {% if sigsum_timeout                -%}  timeout = "{{ sigsum_timeout }}"                              {{- '\n' }}{% endif %}
 {% if sigsum_interval               -%}  interval = "{{ sigsum_interval }}"                            {{- '\n' }}{% endif %}
