--- a/roles/sigsum/templates/config.toml.j2
+++ b/roles/sigsum/templates/config.toml.j2
@@ -16,7 +16,7 @@
 {% if primary is defined %}
 [primary]
 {% if sigsum_policy_file is defined -%}  policy-file = "{{ sigsum_policy_file }}"                      {{- '\n' }}{% endif %}
-{% if sigsum_rate_limit_file        -%}  rate-limit-file = "{{ sigsum_rate_limit_file }}"              {{- '\n' }}{% endif %}
+{% if sigsum_allowlist_limit != -1  -%}  rate-limit-file = "{{ sigsum_rate_limit_file }}"              {{- '\n' }}{% endif %}
 {% if sigsum_allow_test_domain      -%}  allow-test-domain = {{ sigsum_allow_test_domain }}            {{- '\n' }}{% endif %}
 {% if sigsum_secondary_url          -%}  secondary-url = "{{ sigsum_secondary_url }}"                  {{- '\n' }}{% endif %}
 {% if sigsum_secondary_pubkey_file  -%}  secondary-pubkey-file = "{{ sigsum_secondary_pubkey_file }}"  {{- '\n' }}{% endif %}
