--- a/roles/sigsum_agent/templates/sigsum-agent.service.j2
+++ b/roles/sigsum_agent/templates/sigsum-agent.service.j2
@@ -1,10 +1,18 @@
+{% set args = '' %}
+{% if sigsum_agent_soft_key is defined %}
+{% set args = args + '-k ' + sigsum_agent_home|string + '/.config/sigsum-agent/key' %}
+{% elif sigsum_agent_yubihsm_passphrase is defined %}
+{% set args = args + '-a ' + sigsum_agent_home|string + '/.config/sigsum-agent/credentials ' %}
+{% set args = args + '-i ' + sigsum_agent_yubihsm_key_id|string + ' ' %}
+{% set args = args + '-c ' + sigsum_agent_yubihsm_addr|string + ':' + sigsum_agent_yubihsm_port|string %}
+{% endif %}
 [Unit]
 Description=implements Ed25519 signing for various backends using the ssh-agent protocol
 
 [Service]
 Type=exec
 StandardInput=socket
-ExecStart={{ sigsum_agent_home }}/.config/sigsum-agent/start.sh
+ExecStart={{ sigsum_agent_home }}/go/bin/sigsum-agent {{ args }}
 KillSignal=SIGHUP
 
 [Install]
