--- a/roles/sigsum/templates/config.toml.j2
+++ b/roles/sigsum/templates/config.toml.j2
@@ -20,7 +20,7 @@
 {% if sigsum_allow_test_domain      -%}  allow-test-domain = {{ sigsum_allow_test_domain }}            {{- '\n' }}{% endif %}
 {% if sigsum_secondary_url          -%}  secondary-url = "{{ sigsum_secondary_url }}"                  {{- '\n' }}{% endif %}
 {% if sigsum_secondary_pubkey_file  -%}  secondary-pubkey-file = "{{ sigsum_secondary_pubkey_file }}"  {{- '\n' }}{% endif %}
-{% if sigsum_sth_file               -%}  sth-file = "{{ sigsum_sth_file }}"                            {{- '\n' }}{% endif %}
+{% if True                          -%}  sth-file = "{{ sigsum_sth_file }}"                            {{- '\n' }}{% endif %}
 {% if sigsum_max_range              -%}  max-range = {{ sigsum_max_range }}                            {{- '\n' }}{% endif %}
 {% endif %}
 {% if secondary is defined %}
