--- a/roles/sigsum/templates/config.toml.j2
+++ b/roles/sigsum/templates/config.toml.j2
@@ -10,7 +10,7 @@
 {% if sigsum_internal_endpoint      -%}  internal-endpoint = "{{ sigsum_internal_endpoint }}"          {{- '\n' }}{% endif %}
 {% if sigsum_trillian_rpc_server    -%}  trillian-rpc-server = "{{ sigsum_trillian_rpc_server }}"      {{- '\n' }}{% endif %}
 {% if sigsum_backend                -%}  backend = "{{ sigsum_backend }}"                              {{- '\n' }}{% endif %}
-{% if sigsum_trillian_tree_id_file  -%}  trillian-tree-id-file = "{{ sigsum_trillian_tree_id_file }}"  {{- '\n' }}{% endif %}
+{% if True                          -%}  trillian-tree-id-file = "{{ sigsum_trillian_tree_id_file }}"  {{- '\n' }}{% endif %}
 {% if sigsum_key_file               -%}  key-file = "{{ sigsum_key_file }}"                            {{- '\n' }}{% endif %}
 
 {% if primary is defined %}
