Revert: Deletion of sigsum_configdir_base
Deleted in git-commit b8654d352a81ca29484cf94fad2fc03009acba5a, now
added back.  Do this when we have other interesting breaking changes.

--- a/roles/sigsum/templates/rate-limits.config.j2
+++ b/roles/sigsum/templates/rate-limits.config.j2
@@ -9,4 +9,4 @@ key {{ entry.key_hash }} {{ entry.limit }}
 domain {{ entry.domain }} {{ entry.limit }}
 {% endfor %}
 
-public {{ sigsum_home }}/.config/sigsum/{{ sigsum_logname }}/public-suffix-list.txt {{ sigsum_allowlist_limit }}
+public {{ sigsum_home }}/{{ sigsum_configdir_base }}/{{ sigsum_logname }}/public-suffix-list.txt {{ sigsum_allowlist_limit }}
