--- a/roles/sigsum_agent/templates/sigsum-agent.service.j2
+++ b/roles/sigsum_agent/templates/sigsum-agent.service.j2
@@ -11,6 +11,7 @@ Description=implements Ed25519 signing for various backends using the ssh-agent 
 
 [Service]
 Type=exec
+User={{ sigsum_agent_user }}
 StandardInput=socket
 ExecStart={{ sigsum_agent_home }}/go/bin/sigsum-agent {{ args }}
 KillSignal=SIGHUP
