--- a/roles/sigsum_agent/templates/sigsum-agent.socket.j2
+++ b/roles/sigsum_agent/templates/sigsum-agent.socket.j2
@@ -1,5 +1,9 @@
 [Unit]
 Description=sigsum-agent activation socket
+{% if sigsum_agent_yubihsm_passphrase is defined %}
+After=yubihsm-connector.service
+BindsTo=yubihsm-connector.service
+{% endif %}
 
 [Socket]
 RuntimeDirectory={{ sigsum_agent_user }}
