log: Depend on sigsum-agent service when sigsum_ssh_auth_sock is set
(Closes: https://git.glasklar.is/sigsum/admin/ansible/-/issues/45)

--- a/roles/sigsum/templates/sigsum-log-primary@.service.j2
+++ b/roles/sigsum/templates/sigsum-log-primary@.service.j2
@@ -1,7 +1,7 @@
 [Unit]
 Description=Sigsum log primary node
-Requires=trillian-server.service
-After=trillian-server.service
+Requires=trillian-server.service {% if sigsum_ssh_auth_sock is defined %}sigsum-agent.service{% endif +%}
+After=trillian-server.service {% if sigsum_ssh_auth_sock is defined %}sigsum-agent.service{% endif +%}
 
 [Service]
 Type=simple
