--- a/roles/sigsum/templates/sigsum-log-secondary@.service.j2
+++ b/roles/sigsum/templates/sigsum-log-secondary@.service.j2
@@ -1,7 +1,7 @@
 [Unit]
 Description=Sigsum log secondary node
-Requires=trillian-server.service
-After=trillian-server.service
+Requires=trillian-server.service {% if sigsum_agent_socket is defined %}sigsum-agent.service{% endif +%}
+After=trillian-server.service {% if sigsum_agent_socket is defined %}sigsum-agent.service{% endif +%}
 
 [Service]
 Type=simple
