Set RestartSec=1m in roles/litewitness/templates/litewitness@.service.j2 file. The idea is that when the service fails, we want to keep trying to restart it but not too often. This should help avoid giving up due to start rate limiting, and also avoid spamming too frequent error messages.

--- a/roles/litewitness/templates/litewitness@.service.j2
+++ b/roles/litewitness/templates/litewitness@.service.j2
@@ -9,6 +9,7 @@ User=%i
 StandardError=journal
 ExecStart={{ litewitness_basedir }}/%i/.local/bin/litewitness-start
 Restart=on-failure
+RestartSec=1m
 
 [Install]
 WantedBy=multi-user.target
