Skip quotes around origin in litewitness config

--- a/roles/litewitness/templates/non-sigsum-log-keys.j2
+++ b/roles/litewitness/templates/non-sigsum-log-keys.j2
@@ -2,8 +2,8 @@
 # Managed by ansible -- do not edit.
 #
 # Empty lines and lines starting with "#" are ignored.
-# Every other line must list exactly one vkey followed by a space and then an origin in quotes (the origin can contain spaces).
+# Every other line must list exactly one vkey followed by a space and then an origin
 #
 {% for k in litewitness_vkey_log_keys %}
-{{ k.vkey }} "{{ k.origin }}"
+{{ k.vkey }} {{ k.origin }}
 {% endfor %}
