--- a/roles/sigsum/templates/sigsum-log-start.sh.j2
+++ b/roles/sigsum/templates/sigsum-log-start.sh.j2
@@ -5,6 +5,7 @@ role="$1"; shift
 logname="$1"; shift
 prefix=; [[ $# -gt 0 ]] && { prefix="$1"; shift; }
 trillian_rpc=localhost:6962; [[ $# -gt 0 ]] && { trillian_rpc="$1"; shift; }
+tree_id_filename=tree-id-$role
 
 init_tree() {
     local args="--admin_server $trillian_rpc"
@@ -14,7 +15,7 @@ init_tree() {
 	    ;;
     esac
     tree_id=$(~/go/bin/createtree $args)
-    echo "tree-id=${tree_id}" > tree-id
+    echo "tree-id=${tree_id}" > $tree_id_filename
     ~/go/bin/sigsum-mktree --mode empty --sth-file "$dn/sth"
 }
 
@@ -25,10 +26,10 @@ start_log() {
     [[ $# -gt 0 ]] && { local pref="$1"; shift; }
     case $role in
 	primary)
-	    SIGSUM_LOGSERVER_CONFIG="$dn/config.toml" ~/go/bin/sigsum-log-primary
+	    SIGSUM_LOGSERVER_CONFIG="$dn/config-primary.toml" ~/go/bin/sigsum-log-primary
 	    ;;
 	secondary)
-	    SIGSUM_LOGSERVER_CONFIG="$dn/config.toml" ~/go/bin/sigsum-log-secondary
+	    SIGSUM_LOGSERVER_CONFIG="$dn/config-secondary.toml" ~/go/bin/sigsum-log-secondary
 	    ;;
 	*)
 	    echo "$0: $role: invalid role"
@@ -39,5 +40,5 @@ start_log() {
 dn="$HOME/{{ sigsum_configdir_base }}/$logname"
 cd "$dn" 2>/dev/null || { mkdir -pm 0700 "$dn"; cd "$dn"; }
 
-[[ -s tree-id ]] || init_tree
+[[ -s $tree_id_filename ]] || init_tree
 start_log $prefix
