Bugfix: make log restart from cronjob work also for secondary node
Make the cronjob for weekly refreshing of the public suffix list
work also for the secondary node.

Also add verification related to this in a molecule test.

Closes https://git.glasklar.is/sigsum/admin/ansible/-/issues/71

--- a/roles/sigsum/templates/sudoers_sigsum_restart_log.j2
+++ b/roles/sigsum/templates/sudoers_sigsum_restart_log.j2
@@ -1,4 +1,4 @@
 #
 # This file is managed by ansible -- do not edit.
 #
-{{ sigsum_user }} ALL = (root) NOPASSWD: /usr/bin/systemctl restart sigsum-log-primary@{{ sigsum_logname }}
+{{ sigsum_user }} ALL = (root) NOPASSWD: /usr/bin/systemctl restart sigsum-log-{{ sigsum_role }}@{{ sigsum_logname }}
