[sigsum-agent] Do log to the journal
Closes: https://git.glasklar.is/sigsum/admin/ansible/-/issues/72

--- a/roles/sigsum_agent/templates/sigsum-agent.service.j2
+++ b/roles/sigsum_agent/templates/sigsum-agent.service.j2
@@ -17,6 +17,7 @@ BindsTo=yubihsm-connector.service
 Type=exec
 User={{ sigsum_agent_user }}
 StandardInput=socket
+StandardError=journal
 ExecStart={{ sigsum_agent_home }}/go/bin/sigsum-agent {{ args }}
 KillSignal=SIGHUP
 
