--- a/roles/litewitness/templates/litewitness@.service.j2
+++ b/roles/litewitness/templates/litewitness@.service.j2
@@ -8,6 +8,7 @@ Type=simple
 User=%i
 StandardError=journal
 ExecStart={{ litewitness_basedir }}/%i/.local/bin/litewitness-start
+ExecReload=/bin/kill -SIGHUP $MAINPID
 Restart=on-failure
 RestartSec=1m
 
