--- a/roles/litewitness/templates/non-sigsum-log-keys.j2
+++ b/roles/litewitness/templates/non-sigsum-log-keys.j2
@@ -7,3 +7,6 @@
 {% for k in litewitness_vkey_log_keys %}
 {{ k.vkey }} {{ k.origin }}
 {% endfor %}
+{% for log in litewitness_logs %}
+{{ log.vkey }} {{ log.origin }}
+{% endfor %}
