litewitness: fix missing origin in litewitness_logs
Extract origin from vkey when origin is undefined or empty.

--- a/roles/litewitness/templates/non-sigsum-log-keys.j2
+++ b/roles/litewitness/templates/non-sigsum-log-keys.j2
@@ -10,5 +10,9 @@
 {% endfor %}
 {% endif %}
 {% for log in litewitness_logs %}
+{% if log.origin is defined and log.origin != "" %}
 {{ log.vkey }} {{ log.origin }}
+{% else %}
+{{ log.vkey }} {{ log.vkey | split('+') | first }}
+{% endif %}
 {% endfor %}
