{litewitness,litebastion}: add support for obscurity mode

--- a/roles/litebastion/templates/litebastion.service.j2
+++ b/roles/litebastion/templates/litebastion.service.j2
@@ -12,6 +12,9 @@
 {% set _ = args.append('-tls-cert=' ~ litebastion_tls_cert_path) %}
 {% set _ = args.append('-tls-key=' ~ litebastion_tls_key_path) %}
 {% endif %}
+{% if litebastion_obscurity_mode %}
+{% set _ = args.append('-obscurity') %}
+{% endif %}
 [Unit]
 Description=litebastion service
 After=network.target
